--- a/Index.html
+++ b/Index.html
@@ -120,7 +120,7 @@
     <div class="thumbnail-container">
         <iframe src="https://www.youtube.com/embed/fqyIGr2cQ88?controls=0&mute=0&encrypted-media=0" title="Chop Suey" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com/embed/tpnivJe5m_0?controls=0&mute=0&encrypted-media=0" title="Toxicity" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/EUcokt6MDyQ?si=97XlU2x5cRCzx7Yf&amp;controls=0&encrypted-media=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/wi_SmaH1JKg?si=QxMJr-b8R0HrCalX" title="IEAIAIO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com/embed/WPXnbsKHufU?si=HTHXMkO_rr_f4SW_" title="Toxicity_Urban" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
     
     <div class="social-links">
